--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,13 +1,13 @@
 steps:
 # Build the container image
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/flaskapp1spm-405600/flaskapp1spm', '.']
+  args: ['build', '-t', 'gcr.io/a5flaskapp/a5flaskapp', '.']
 # Push the container image to Container Registry
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/flaskapp1spm-405600/flaskapp1spm']
+  args: ['push', 'gcr.io/a5flaskapp/a5flaskapp']
 # Deploy container image to Cloud Run
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: gcloud
-  args: ['run', 'deploy', 'flaskapp1spm', '--image', 'gcr.io/flaskapp1spm-405600/flaskapp1spm', '--region', 'us-central1', '--platform', 'managed','--port','80']
+  args: ['run', 'deploy', 'a5flaskapp', '--image', 'gcr.io/a5flaskapp/a5flaskapp', '--region', 'us-central1', '--platform', 'managed','--port','80']
 images:
-- gcr.io/flaskapp1spm-405600/flaskapp1spm
+- gcr.io/a5flaskapp/a5flaskapp
